@@ -626,7 +626,6 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
     if(random.nextBoolean()) {
       configFile = "solrconfig-master1-keepOneBackup.xml";
       addNumberToKeepInRequest = false;
-      backupKeepParamName = ReplicationHandler.NUMBER_BACKUPS_TO_KEEP_INIT_PARAM;
     }
     masterJetty.stop();
     master.copyConfigFile(CONF_DIR + configFile, 
@@ -713,8 +712,16 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
     File[] snapDir = new File[2];
     String firstBackupTimestamp = null;
     for(int i=0 ; i<2 ; i++) {
-      BackupThread backupThread = new BackupThread(addNumberToKeepInRequest, backupKeepParamName);
-      backupThread.start();
+      BackupThread backupThread = null;
+      if(!addNumberToKeepInRequest) {
+        if(random.nextBoolean()) {
+          masterClient.commit();
+        } else {
+          backupThread = new BackupThread(addNumberToKeepInRequest, backupKeepParamName);
+          backupThread.start();
+        }
+      }
+      
       
       File dataDir = new File(master.getDataDir());
       
@@ -739,7 +746,7 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
         waitCnt++;
       }
       
-      if(backupThread.fail != null) {
+      if(backupThread!= null && backupThread.fail != null) {
         fail(backupThread.fail);
       }
   
